[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apeSees"
version = "0.1.0"
description = "A pythonic openseespy wrapper - Ladruño4ever"
readme = "README.md"
authors = [
    {name = "Nicolas Mora Bowen", email = "nmorabowen@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "jupyter",
    "tables",
    "pandas",
    "scipy",
]

[project.urls]
"Homepage" = "https://github.com/nmorabowen/apeSees"
"Bug Tracker" = "https://github.com/nmorabowen/STKO_to_python/apeSees"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}} 

[tool.setuptools.package-data]
"*" = ["*.ipynb"]